Fix color contrast

--- a/client/src/app/+signup/+register/custom-stepper.component.scss
+++ b/client/src/app/+signup/+register/custom-stepper.component.scss
@@ -82,7 +82,7 @@ header {
     }
 
     .step-label {
-      color: pvar(--fg);
+      color: pvar(--on-primary);
     }
   }
 
